# tasker

./: .gitignore  README.md  tasker.cabal
app/: Main.hs
src/: Display.hs  Parser.hs  Store.hs  Task.hs
