cabal-version:      3.0
name:               tasker
version:            0.1.0
synopsis:           A focused 3-task CLI manager for your day
description:
  Start each day with three tasks you know you can finish.
  No more, no less. Focus and get them done.
license:            MIT
category:           Productivity
build-type:         Simple

executable task
  main-is:             Main.hs
  hs-source-dirs:      app, src
  other-modules:
    Task
    Parser
    Store
    Display
  build-depends:
    base          >= 4.14 && < 5,
    text          >= 1.2  && < 3,
    bytestring    >= 0.10 && < 0.13,
    cassava       >= 0.5  && < 0.6,
    time          >= 1.9  && < 2,
    directory     >= 1.3  && < 2,
    filepath      >= 1.4  && < 2,
    ansi-terminal >= 0.11 && < 2,
    vector        >= 0.12 && < 1
  default-language:    GHC2021
  default-extensions:  OverloadedStrings
  ghc-options:         -Wall -Wcompat -Wno-name-shadowing
